# OmniDrones

./: README.md  pyproject.toml
cfg/: train.yaml
cfg/base/: sim_base.yaml
cfg/env/: example.yaml  train.yaml
cfg/sim/: base.yaml
cfg/task/: Formation.yaml  Hover.yaml  Track.yaml  TrackRand.yaml  acc_rate_hummingbird.yaml  att_force_angle_firefly.yaml  att_height_angle_firefly.yaml  att_height_rate_firefly.yaml  pos_angle_firefly.yaml  pos_angle_hummingbird.yaml  rate_hummingbird.yaml  vel_rate_hummingbird.yaml
cfg/viewer/: base.yaml
docs/source/: conf.py  installation.rst  troubleshooting.md
examples/: 00_play_drones.py  0_helloworld.py  0env_0drones.py  0env_0drones.yaml  0env_1drones_with_cams.py  0env_1drones_with_cams.yaml  1_multiple-drones.py  1rate_0.py  1rate_0.yaml  1rate_0flip.py  1rate_0flip.yaml  2-0_controller-single.py  2-1_controller-multi.py  2att_0zforce_yawangle.py  2att_0zforce_yawangle.yaml  2att_1zheight_yawrate.yaml  2att_2pitch.py  2att_2pitch.yaml  2att_3roll.py  2att_3roll.yaml  3_payload.py  3pos_0pos_yawangle.py  3pos_0pos_yawangle.yaml  3pos_1vel_yawrate.py  3pos_1vel_yawrate.yaml  3pos_2acc_yawrate.py  3pos_2acc_yawrate.yaml  3pos_3circle.py  3pos_3circle.yaml  3pos_4circle.py  3pos_4circle.yaml  demo.yaml  demo_2.yaml  demo_downwash.py  demo_drone.py  demo_transport.py  test_att_controller.py  test_dragon.py  test_rate_controller.py
omni_drones/: __init__.py
omni_drones/envs/: __init__.py  forest.py  isaac_env.py  pinball.py  racing_simple.py  rearrange.py
omni_drones/utils/: kit.py  (+3 more)
scripts/: play.py  train.py  train.yaml
(+46 files in other folders)
